# Rusty

./: .gitignore  AGENTS.md  BUILD_AND_RELEASE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.claude/: launch.json  settings.local.json
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-automerge.yml
scripts/: generate-icons.zsh  release-build.zsh  release-preflight.zsh  test-release-preflight.zsh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: Rusty.icns  icon.icns
src-tauri/src/: appinfo.rs  commands.rs  data_dir.rs  dedupe.rs  error.rs  lib.rs  logs.rs  main.rs  memory.rs  paths.rs  perceptual.rs  quarantine.rs  reports.rs  scanner.rs  state.rs  updates.rs
src-tauri/tests/: smoke.rs
ui/: app.css  app.js  index.html
