[package]
name = "rusty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Safe duplicate finder with a persistent memory bank."

[lib]
name = "rusty_core"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "rusty"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

blake3 = "1"
jwalk = "0.8"
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] }
rusqlite = { version = "0.40", features = ["bundled"] }
unicode-normalization = "0.1"
once_cell = "1"
thiserror = "1"
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4"] }
window-vibrancy = "0.7.1"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
